--- a/src/expression/test/CMakeLists.txt
+++ b/src/expression/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(TEST_SRCS
   test-expression-and-inside.cpp
   test-user-defined-literals.cpp
-  test-quantvec.cpp
+  test-quanttree.cpp
 )
 
 add_executable(booleguru-expression-test ${TEST_SRCS})
