--- a/src/expression/CMakeLists.txt
+++ b/src/expression/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(booleguru-expression STATIC ${SRCS})
 
 target_include_directories(booleguru-expression PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(booleguru-expression PUBLIC unordered_dense::unordered_dense)
+target_link_libraries(booleguru-expression PUBLIC unordered_dense::unordered_dense booleguru-util)
 
 if(TARGET Catch2::Catch2)
   add_subdirectory(test)
