Support reading python files as formula builders

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,14 +4,17 @@ add_subdirectory(expression)
 add_subdirectory(transform)
 add_subdirectory(solve)
 add_subdirectory(lua)
-add_subdirectory(parse)
-add_subdirectory(serialize)
 
 if(NOT EMSCRIPTEN)
   if(pybind11_FOUND)
     add_subdirectory(py)
   endif()
+endif()
 
+add_subdirectory(parse)
+add_subdirectory(serialize)
+
+if(NOT EMSCRIPTEN)
   add_subdirectory(cli)
 endif()
 
