--- a/src/solve/CMakeLists.txt
+++ b/src/solve/CMakeLists.txt
@@ -1,12 +1,13 @@
 set(SRCS
   src/result.cpp
+  src/sat.cpp
 )
 
 add_library(booleguru-solve STATIC ${SRCS})
 
 target_include_directories(booleguru-solve PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(booleguru-solve PUBLIC booleguru-expression booleguru-transform booleguru-util)
+target_link_libraries(booleguru-solve PUBLIC booleguru-expression booleguru-transform booleguru-util booleguru-serialize)
 
 if(TARGET Catch2::Catch2)
   add_subdirectory(test)
