Add --version and --help

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.13)
 cmake_policy(SET CMP0048 NEW)
 cmake_policy(SET CMP0079 NEW)
 project(booleguru
-  VERSION 0.2)
+  VERSION 0.3)
+
+add_compile_definitions(BOOLEGURU_VERSION="${CMAKE_PROJECT_VERSION}")
 
 set(CMAKE_CXX_STANDARD 20)
 
