Start polishing docs some more

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -36,6 +36,11 @@ set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
 set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/sphinx)
 set(SPHINX_INDEX_FILE ${SPHINX_BUILD}/index.html)
 
+set(SPHINX_DOCS
+  ${CMAKE_CURRENT_SOURCE_DIR}/index.rst
+  ${CMAKE_CURRENT_SOURCE_DIR}/cli.rst
+)
+
 # Only regenerate Sphinx when:
 # - Doxygen has rerun
 # - Our doc files have been updated
@@ -49,8 +54,7 @@ add_custom_command(OUTPUT ${SPHINX_INDEX_FILE}
                    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                    DEPENDS
                    # Other docs files you want to track should go here (or in some variable)
-                   ${CMAKE_CURRENT_SOURCE_DIR}/index.rst
-                   ${DOXYGEN_INDEX_FILE}
+                   ${SPHINX_DOCS}
                    MAIN_DEPENDENCY ${SPHINX_SOURCE}/conf.py
                    COMMENT "Generating documentation with Sphinx")
 
