--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(booleguru-cli ${SRCS})
 target_include_directories(booleguru-cli PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(booleguru-cli PUBLIC booleguru-expression booleguru-parse booleguru-transform booleguru-serialize booleguru-lua)
 
+target_link_libraries(booleguru-cli PRIVATE fmt)
+
 if(TARGET booleguru-py-embed)
   target_link_libraries(booleguru-cli PUBLIC booleguru-py-embed)
 endif()
