More groundwork for SMT translation

--- a/src/expression/CMakeLists.txt
+++ b/src/expression/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SRCS
   src/op.cpp
   src/op_manager.cpp
   src/var_manager.cpp
+  src/bvop_manager.cpp
   src/script_manager.cpp
   src/literals.cpp
   src/quanttree.cpp
