Fix issue where imported python module collides with embedded py
Now, finally, one can run multiple python modules without worry.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -25,3 +25,6 @@ endif()
 if(TARGET Catch2::Catch2)
   add_subdirectory(test)
 endif()
+
+set_property(TARGET booleguru-cli PROPERTY ENABLE_EXPORTS ON)
+set_property(TARGET booleguru PROPERTY ENABLE_EXPORTS ON)
