--- a/src/py/CMakeLists.txt
+++ b/src/py/CMakeLists.txt
@@ -1,8 +1,6 @@
 add_library(booleguru-py-common OBJECT
   ${CMAKE_CURRENT_SOURCE_DIR}/src/solver.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/model.cpp
-
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/py_register_booleguru_types.cpp
 )
 
 target_include_directories(booleguru-py-common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -23,6 +21,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
 pybind11_add_module(pybooleguru SHARED
   ${CMAKE_CURRENT_SOURCE_DIR}/src/python_module.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/py_register_booleguru_types.cpp
 )
 
 target_link_libraries(booleguru-py-embed PUBLIC booleguru-py-common)
@@ -30,3 +29,6 @@ target_link_libraries(pybooleguru PUBLIC booleguru-py-common)
 
 target_link_libraries(booleguru-py-embed PRIVATE pybind11::embed)
 target_link_libraries(pybooleguru PRIVATE pybind11::module)
+
+set_property(TARGET pybooleguru PROPERTY ENABLE_EXPORTS ON)
+set_property(TARGET booleguru-py-embed PROPERTY ENABLE_EXPORTS ON)
