Implement a custom expression tree mutator
It still has to be added to the fuzzer

--- a/src/expression/CMakeLists.txt
+++ b/src/expression/CMakeLists.txt
@@ -6,6 +6,9 @@ set(SRCS
   src/bvop_manager.cpp
   src/literals.cpp
   src/quanttree.cpp
+  src/mutator.cpp
+  src/mutation.cpp
+  src/mutation_sampler.cpp
 )
 
 add_library(booleguru-expression STATIC ${SRCS})
