Try to force luajit to do more optimizations up-front

--- a/src/lua/CMakeLists.txt
+++ b/src/lua/CMakeLists.txt
@@ -20,12 +20,12 @@ function(create_resources dir output)
     if(using_luajit AND ${bin} MATCHES ".fnl$")
         message(STATUS "Convert fnl script ${bin} to lua and then to bytecode prior to embedding using LuaJIT")
         string(REGEX REPLACE "_fnl$" "_lua" filename ${filename})
-        execute_process(COMMAND bash -c "luajit ${CMAKE_CURRENT_SOURCE_DIR}/bin/fennel --compile | luajit -b /dev/stdin /tmp/booleguru-luajit-bytecode.bin")
+        execute_process(COMMAND bash -c "luajit -O9 ${CMAKE_CURRENT_SOURCE_DIR}/bin/fennel --compile | luajit -b /dev/stdin /tmp/booleguru-luajit-bytecode.bin")
         file(READ /tmp/booleguru-luajit-bytecode.bin filedata HEX)
         message(STATUS "Change require-name of fennel file ${bin} to ${filename} because the file was converted to Lua")
     elseif(using_luajit AND ${bin} MATCHES ".lua$")
         message(STATUS "Convert lua script ${bin} to bytecode prior to embedding using LuaJIT")
-        execute_process(COMMAND luajit -b ${bin} /tmp/booleguru-luajit-bytecode.bin)
+        execute_process(COMMAND luajit -O9 -b ${bin} /tmp/booleguru-luajit-bytecode.bin)
         file(READ /tmp/booleguru-luajit-bytecode.bin filedata HEX)
     else()
         file(READ ${bin} filedata HEX)
