Add :minimize-failing as experimental fork-based minimizer

--- a/src/transform/CMakeLists.txt
+++ b/src/transform/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SRCS
   src/distribute_ors.cpp
   src/prenex_quantifiers.cpp
   src/prenex_quantifiers_optimal.cpp
+  src/minimize_failing.cpp
   src/tseitin.cpp
   src/cnf.cpp
 )
