--- a/src/lua/CMakeLists.txt
+++ b/src/lua/CMakeLists.txt
@@ -20,7 +20,7 @@ function(create_resources dir output)
     if(using_luajit AND ${bin} MATCHES ".fnl$")
         message(STATUS "Convert fnl script ${bin} to lua and then to bytecode prior to embedding using LuaJIT")
         string(REGEX REPLACE "_fnl$" "_lua" filename ${filename})
-        execute_process(COMMAND bash -c "luajit -O9 ${CMAKE_CURRENT_SOURCE_DIR}/bin/fennel --compile | luajit -b /dev/stdin ${CMAKE_CURRENT_BINARY_DIR}/booleguru-luajit-bytecode.bin")
+        execute_process(COMMAND bash -c "luajit -O9 ${CMAKE_CURRENT_SOURCE_DIR}/bin/fennel --compile ${bin} | luajit -O9 -b /dev/stdin ${CMAKE_CURRENT_BINARY_DIR}/booleguru-luajit-bytecode.bin")
         file(READ ${CMAKE_CURRENT_BINARY_DIR}/booleguru-luajit-bytecode.bin filedata HEX)
         message(STATUS "Change require-name of fennel file ${bin} to ${filename} because the file was converted to Lua")
     elseif(using_luajit AND ${bin} MATCHES ".lua$")
