Implement first version of a polarity extracting transformer

--- a/src/transform/CMakeLists.txt
+++ b/src/transform/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SRCS
   src/prenex_quantifiers.cpp
   src/prenex_quantifiers_optimal.cpp
   src/minimize_failing.cpp
+  src/polarity_extractor.cpp
   src/tseitin.cpp
   src/cnf.cpp
 )
