Add plaisted-greenbaum transform, which is now the default for --dimacs

--- a/src/transform/CMakeLists.txt
+++ b/src/transform/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRCS
   src/minimize_failing.cpp
   src/polarity_extractor.cpp
   src/tseitin.cpp
+  src/plaisted_greenbaum.cpp
   src/cnf.cpp
 )
 
